bk_ida/gccida/c3/expand_decl_cleanup
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4555:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4557:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4559:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4561:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4581:29: error: invalid suffix 'xmode' on integer constant
x = gen_reg_rtx( *(short *)0xmode); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4592:32: error: invalid suffix 'xmode' on integer constant
v9 = type_for_mode( *(short *)0xmode, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4595:20: error: expected expression
v11 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/stmt.c:4595:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node *)*( &global_trees + 27); 
        ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/expand_decl_cleanup/src/obj/stmt.o] Error 1
